Bug 120265 - Assert when moving an item at customization
Summary: Assert when moving an item at customization
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0
Keywords: haveBacktrace, needUITest
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2018-10-02 10:32 UTC by Heiko Tietze
Modified: 2021-02-09 04:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (16.94 KB, text/plain)
2018-10-02 20:58 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2018-10-02 10:32:03 UTC
Go to File > Customization, select an item in the right list of assigned commands (used Help > User Guide), click the gear button next to the menu selection and choose Move => boom. Maybe caused by the same problem as bug 120238.

...
warn:fwk.uiconfiguration:20153:20153:framework/source/uiconfiguration/ImageArrayData.cxx:75: Failed to load image 'cmd/lc_hscroll.png' from icon theme 'breeze'
soffice.bin: /home/ht/Sources/libreoffice/vcl/unx/gtk3/gtk3gtkinst.cxx:3675: void {anonymous}::insert_row(GtkListStore*, int, const rtl::OUString&, const rtl::OUString&, const rtl::OUString*, VirtualDevice*): Assertion `(*pIconName== "dialog-warning" || *pIconName== "dialog-error" ||*pIconName== "dialog-information") && "unknown stock image"' failed.

Version: 6.2.0.0.alpha0+
Build ID: bb8207ed0a900e1e45c5d3f91f82d28d5c88bc43
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 1 Muhammet Kara 2018-10-02 10:46:51 UTC
Confirmed on 

Version: 6.2.0.0.alpha0+
Build ID: ef20b1d3dbc834d1fd4f858ed5f10e24747a0216
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: threaded

6.1.1 doesn't have the issue. So a regression. Seems liek we need some more UI tests for the dialog.
Comment 2 Julien Nabet 2018-10-02 20:05:52 UTC
In File menu, I don't see "Customization" item. (I enabled Advanced features)
Where can it be found?
Comment 3 Heiko Tietze 2018-10-02 20:15:57 UTC
(In reply to Julien Nabet from comment #2)
> In File menu, I don't see "Customization" item. (I enabled Advanced features)
> Where can it be found?

Customization is an extra menu item under Tools. You get the dialog where commands can be assigned to toolbars, menus or shortcuts.
Comment 4 Julien Nabet 2018-10-02 20:58:26 UTC
Created attachment 145336 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce the assert.
Comment 5 Julien Nabet 2018-10-02 21:00:19 UTC
Thank you Heiko for your feedback.

Caolán: noticing the assert has been added with 64d764e02a848ed243409092d3fdcb4775db5153, thought you might be interested in this one.
Comment 6 Commit Notification 2018-10-03 19:07:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d25c88ef9bbc9ab74a90b2669561e336d5a7a148

Resolves: tdf#120265 assert on moving item via customization dialog

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Heiko Tietze 2018-10-05 11:38:35 UTC
No assertion with

Version: 6.2.0.0.alpha0+
Build ID: 42b629bc7f700d6f1d1b922e5c6aab119b8edf27
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: threaded