Resolves: tdf#120265 assert on moving item via customization dialog

Change-Id: I435409a1e16ad138519fb31e873dcb4f500b3734
Reviewed-on: https://gerrit.libreoffice.org/61319
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>